# slinger-deploy

./: .gitignore  Cargo.toml  flake.nix  run-cons-test  run-prod-test  run-test-pkarr-relay  tee  tmpcreds.txt
src/: consumer.rs  identity.rs  main.rs  producer.rs
src/authentication/: mod.rs  ucans.rs
src/common/: types.rs
src/protocol/: authentication.rs  deployments.rs  gossip.rs  mod.rs
