[package]
name = "slinger"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core Networking & P2P
# iroh v0.96+ introduced significant QUIC multipath and refined relay APIs

# Kubernetes Orchestration
kube = { version = "0.96", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }

# Serialization & Security
postcard = { version = "1.0", features = ["alloc", "use-std"] }
ed25519-dalek = "2.1"
ucan = "0.4.0" # For capability-based delegation

# Async & CLI
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
iroh = {version = "0.96.1", features = ["address-lookup-mdns", "address-lookup-pkarr-dht"] }
iroh-ping = "0.8.0"
iroh-tickets = "0.3.0"
iroh-blobs = "0.98.0"
serde = { version = "1.0.228", features = ["derive"] }
iroh-gossip = "0.96.0"
n0-future = "0.3.2"
blake3 = "1.8.3"
rand = "0.9.2"
hex = "0.4.3"
toml = "1.0.3"
env_logger = "0.11.9"
log = { version = "0.4.29", features = ["kv"] }
bs58 = "0.5.1"
async-trait = "0.1.89"
serde_json = "1.0.149"
ucan-key-support = "0.1.7"
url = "2.5.8"
n0-error = { version = "0.1.3", features = ["anyhow"] }
quinn = "0.11.9"
pkarr = { version = "5", features = ["relays"] }
tracing-subscriber = "0.3.22"

# [patch.crates-io]
# digest = { git = "https://github.com/RustCrypto/traits", tag = "digest-v0.11.0-rc.10" }
